# Codirigent

./: .gitignore  CURRENT_STATUS.md  Cargo.toml  DONE.md  FINAL_STATUS.md  FIXING_ALL_ISSUES.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  ITERATION1_SUMMARY.md  ITERATION2_PLAN.md  ITERATION2_SUMMARY.md  ITERATION3_SUMMARY.md  ITERATION4_SUMMARY.md  ITERATION_6_SUMMARY.md  NEXT_ITERATION_PLAN.md  PHASE3_PROGRESS.md  PROGRESS.md  RALPH_LOOP_STATUS.md  RALPH_LOOP_SUMMARY.md  RALPH_STATUS.md  README.md  README.zh-CN.md  README.zh-TW.md  STATUS.md  TASKS.md  TESTING_GUIDE.md  build.rs  dirigent-spec-v2.md
crates/codirigent-core/: Cargo.toml
crates/codirigent-core/benches/: clone_bench.rs
crates/codirigent-core/src/: assignment.rs  auto_save.rs  broadcast.rs  change_summary.rs  clipboard_types.rs  compaction.rs  config.rs  config_service.rs  context.rs  error.rs  event_bus.rs  events.rs  hook_installer.rs  lib.rs  persistence.rs  persistence_service.rs  pipeline.rs  plugin.rs  ralph.rs  scheduler.rs  session_advanced.rs  session_notes.rs  session_update.rs  skill.rs  storage.rs  task_manager.rs  types.rs  verification.rs
crates/codirigent-core/src/scheduler/: config.rs  mod.rs  queue.rs  selection.rs
crates/codirigent-core/src/traits/: mod.rs  ralph_controller.rs  services.rs  skill_manager.rs  verifier.rs
crates/codirigent-core/src/types/: git.rs  ids.rs  layout.rs  mod.rs  session.rs  state.rs  status.rs  task.rs  tests.rs  verification.rs  worktree.rs
crates/codirigent-core/tests/: context_tests.rs  persistence_tests.rs  scheduler_tests.rs  storage_integration.rs
crates/codirigent-detector/: Cargo.toml
crates/codirigent-detector/src/: detector.rs  lib.rs  notification.rs  patterns.rs
crates/codirigent-detector/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/codirigent-filetree/: Cargo.toml
crates/codirigent-filetree/src/: entry.rs  error.rs  lib.rs  tree.rs
crates/codirigent-hook/: Cargo.toml
crates/codirigent-hook/src/: main.rs
crates/codirigent-plugin/: Cargo.toml
crates/codirigent-plugin/src/: lib.rs  manager.rs  registry.rs
crates/codirigent-session/: Cargo.toml
crates/codirigent-session/src/: broadcast_service.rs  claude_session_reader.rs  cli_detector.rs  cli_output_detection.rs  clipboard_service.rs  codex_session_reader.rs  gemini_session_reader.rs  git_status.rs  lib.rs  manager.rs  osc133.rs  osc7.rs  pty.rs  ralph_controller.rs  session.rs  session_io.rs  session_reader_common.rs  shell_detection.rs  skill_manager.rs  worktree.rs
crates/codirigent-session/tests/: clipboard_integration.rs  pty_tests.rs
crates/codirigent-ui/: Cargo.toml
crates/codirigent-ui/src/: actions.rs  app.rs  broadcast_bar.rs  clipboard.rs  clipboard_preview.rs  drawer.rs  empty_session.rs  icon_rail.rs  icons.rs  integration.rs  keybindings.rs  layout.rs  layout_profile.rs  lib.rs  platform_drag.rs  sidebar.rs  smart_clipboard.rs  splash_screen.rs  status_bar.rs  terminal.rs  terminal_colors.rs  terminal_header.rs  terminal_runtime.rs  terminal_search.rs  terminal_theme_presets.rs  terminal_view.rs  theme.rs  theme_config.rs  theme_manager.rs  title_bar.rs  toolbar.rs  top_bar.rs  ui_composition.rs
crates/codirigent-ui/src/components/: mod.rs  text_input.rs
crates/codirigent-ui/src/input/: mouse.rs
crates/codirigent-ui/src/layout/: geometry.rs  grid.rs  mod.rs  profile.rs  split.rs  state.rs
crates/codirigent-ui/src/platform/: clipboard_linux.rs  clipboard_macos.rs  clipboard_stub.rs  clipboard_windows.rs  mod.rs  shutdown_guard.rs  shutdown_guard_macos.rs  shutdown_guard_windows.rs
crates/codirigent-ui/src/settings/: advanced.rs  appearance.rs  controls.rs  general.rs  mod.rs  page.rs  render.rs  sessions.rs  shortcuts.rs  terminal.rs
crates/codirigent-ui/src/sidebar/: file_tree.rs  tests.rs  types.rs  worktree_panel.rs
crates/codirigent-ui/src/task_board/: mod.rs  panel.rs  task_item.rs  tests.rs
crates/codirigent-ui/src/theme_config/: builtins.rs  conversion.rs  mod.rs  schema.rs
crates/codirigent-ui/src/workspace/: README.md  cli_helpers.rs  clipboard_state.rs  core.rs  drawer_render.rs  editor_detection.rs  gpui.rs  grid_render.rs  icon_rail_render.rs  icon_utils.rs  impl_clipboard.rs  (+35 more)
crates/codirigent-updater/: Cargo.toml
crates/codirigent-updater/src/: checker.rs  downloader.rs  lib.rs  service.rs  state.rs
crates/codirigent-verification/: Cargo.toml
crates/codirigent-verification/src/: change_detector.rs  detector.rs  executor.rs  formatter.rs  lib.rs  parser.rs  pipeline.rs  risk_assessor.rs  verifier.rs
crates/dirigent-core/: Cargo.toml
crates/dirigent-core/src/: assignment.rs  auto_save.rs  broadcast.rs  change_summary.rs  clipboard_types.rs  config.rs  config_service.rs  context.rs  error.rs  event_bus.rs  events.rs  lib.rs  persistence.rs  persistence_service.rs  pipeline.rs  plugin.rs  ralph.rs  scheduler.rs  session_advanced.rs  session_notes.rs  skill.rs  storage.rs  task_manager.rs  traits.rs  types.rs  verification.rs
crates/dirigent-core/tests/: storage_integration.rs
crates/dirigent-filetree/: Cargo.toml
crates/dirigent-filetree/src/: entry.rs  lib.rs  tree.rs
crates/dirigent-plugin/: Cargo.toml
crates/dirigent-plugin/src/: lib.rs  manager.rs  registry.rs
crates/dirigent-session/: Cargo.toml
crates/dirigent-session/src/: broadcast_service.rs  cli_detector.rs  clipboard_service.rs  lib.rs  manager.rs  pty.rs  ralph_controller.rs  session.rs  skill_manager.rs  worktree.rs
crates/dirigent-session/tests/: clipboard_integration.rs
crates/dirigent-ui/: Cargo.toml
crates/dirigent-ui/src/: actions.rs  app.rs  clipboard.rs  clipboard_preview.rs  integration.rs  keybindings.rs  layout.rs  layout_profile.rs  lib.rs  sidebar.rs  smart_clipboard.rs  splash_screen.rs  terminal.rs  terminal_colors.rs  terminal_view.rs  theme.rs  theme_config.rs  theme_manager.rs
crates/dirigent-verification/: Cargo.toml
crates/dirigent-verification/src/: change_detector.rs  detector.rs  executor.rs  formatter.rs  lib.rs  parser.rs  pipeline.rs  risk_assessor.rs  verifier.rs
(+118 files in other folders)
