[workspace]
resolver = "2"
members = [
    "crates/dirigent-core",
    "crates/dirigent-session",
    "crates/dirigent-detector",
    "crates/dirigent-ui",
    "crates/dirigent-filetree",
    "crates/dirigent-plugin",
    "crates/dirigent-verification",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Dirigent Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/dirigent"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0.100"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }

# PTY and terminal
portable-pty = "0.8.1"

# Platform-specific
procfs = "0.18.0"
libproc = "0.14.8"
libc = "0.2.180"

# Pattern matching
regex = "1.12.2"

# Async traits
async-trait = "0.1"

# Duration serialization
humantime-serde = "1.1.1"

# Git operations
git2 = "0.17"

# Directories
dirs = "5"

# Testing
tempfile = "3"

# GPUI from crates.io with pinned core-text to avoid core-graphics conflict
gpui = "0.2"
core-text = "=21.0.0"

# Internal crates
dirigent-core = { path = "crates/dirigent-core" }
dirigent-session = { path = "crates/dirigent-session" }
dirigent-detector = { path = "crates/dirigent-detector" }
dirigent-ui = { path = "crates/dirigent-ui" }
dirigent-filetree = { path = "crates/dirigent-filetree" }
dirigent-plugin = { path = "crates/dirigent-plugin" }
dirigent-verification = { path = "crates/dirigent-verification" }

# Root package (the main binary)
[package]
name = "dirigent"
description = "AI Coding Agent Orchestration IDE"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dirigent"
path = "src/main.rs"

[dependencies]
dirigent-core.workspace = true
dirigent-session.workspace = true
dirigent-detector.workspace = true
dirigent-filetree.workspace = true
dirigent-ui.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
gpui-full = ["dirigent-ui/gpui-full"]
terminal = ["dirigent-ui/terminal"]

[dev-dependencies]
tempfile.workspace = true


