[workspace]
resolver = "2"
members = [
    "crates/codirigent-core",
    "crates/codirigent-session",
    "crates/codirigent-detector",
    "crates/codirigent-ui",
    "crates/codirigent-filetree",
    "crates/codirigent-plugin",
    "crates/codirigent-verification",
    "crates/codirigent-hook",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Codirigent Contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/oso95/Codirigent"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0.100"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }

# PTY and terminal
portable-pty = "0.9"

# Platform-specific
procfs = "0.18.0"
libproc = "0.14.8"
libc = "0.2.180"

# Pattern matching
regex = "1.12.2"

# Async traits
async-trait = "0.1"

# Duration serialization
humantime-serde = "1.1.1"

# Image processing
image = { version = "0.25.9", default-features = false, features = ["png", "bmp", "tiff", "jpeg"] }

# Git operations
git2 = "0.20"

# Directories
dirs = "5"

# Testing
tempfile = "3"
filetime = "0.2"
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.4"
serial_test = "3"

# GPUI from crates.io with pinned core-text to avoid core-graphics conflict
# Use default-features = false to let individual crates specify platform features
gpui = { version = "0.2", default-features = false }
core-text = "=21.0.0"

# Internal crates
codirigent-core = { path = "crates/codirigent-core" }
codirigent-session = { path = "crates/codirigent-session" }
codirigent-detector = { path = "crates/codirigent-detector" }
codirigent-ui = { path = "crates/codirigent-ui" }
codirigent-filetree = { path = "crates/codirigent-filetree" }
codirigent-plugin = { path = "crates/codirigent-plugin" }
codirigent-verification = { path = "crates/codirigent-verification" }

# Root package (the main binary)
[package]
name = "codirigent"
description = "AI Coding Agent Orchestration IDE"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "codirigent"
path = "src/main.rs"

[dependencies]
codirigent-core.workspace = true
codirigent-session.workspace = true
codirigent-detector.workspace = true
codirigent-filetree.workspace = true
codirigent-ui.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
gpui-full = ["codirigent-ui/gpui-full"]
terminal = ["codirigent-ui/terminal"]

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile.workspace = true
chrono.workspace = true

# Optimized profile for distribution builds
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 8
strip = true

