[package]
name = "codirigent-core"
description = "Core types, traits, and event system for Dirigent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
humantime-serde.workspace = true
regex = "1"
dirs.workspace = true

[dev-dependencies]
tempfile = "3.15"
