[package]
name = "codirigent-detector"
description = "Process monitoring and status detection for Dirigent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
codirigent-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
regex.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs.workspace = true
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libproc.workspace = true
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
] }
