[package]
name = "codirigent-session"
description = "Session and PTY management for Dirigent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
codirigent-core.workspace = true
codirigent-detector.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
portable-pty.workspace = true
dirs.workspace = true
chrono.workspace = true
serde_json.workspace = true

git2.workspace = true
image.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
filetime.workspace = true
