[package]
name = "codirigent-updater"
description = "Auto-update checking and installation for Codirigent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
codirigent-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
semver.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true
chrono.workspace = true
futures-util.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
