[package]
name = "dirigent-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin system for Dirigent"

[dependencies]
dirigent-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
