[package]
name = "dirigent-session"
description = "Session and PTY management for Dirigent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dirigent-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
portable-pty.workspace = true

[dev-dependencies]
tempfile = "3.24"
serde_json.workspace = true
