[package]
name = "dirigent-verification"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verification gate for Dirigent - runs tests and checks on completed tasks"

[dependencies]
dirigent-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "time", "sync"] }
tracing.workspace = true
async-trait.workspace = true
regex.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
